Min width added to header links to avoid overclipping

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -35,7 +35,8 @@ ul {
 
 a {
   text-decoration: none;
-  color: black;
+  color: grey;
+  font-weight: 500;
 }
 
 .header {
@@ -48,4 +49,5 @@ a {
 .right-links {
   display: flex;
   gap: 12px;
+  min-width: 0;
 }
